# PluviaGoldberg

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  keystore  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: app-release-signed.yml  pluvia-pr-check.yml
.run/: Pluvia [formatKotlin].run.xml  Pluvia [lintKotlin].run.xml
PrivacyPolicy/: README.md
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/release-signed/: output-metadata.json
app/release-signed/baselineProfiles/0/: app-release-signed.dm
app/release-signed/baselineProfiles/1/: app-release-signed.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: box64_env_vars.json  common_dlls.json  imagefs.txz  imagefs_longjunyu_patched.txz  imagefs_patches.tzst  imagefs_patches_longjunyu_patched.tzst  lj2-7.1.2-xinputdlls.tzst  lj2-7.1.3-xinputdlls.tzst  steam_regions.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/steampipe/: CMakeLists.txt
app/src/main/cpp/steampipe/src/: protocol.h  socket_client.c  socket_client.h  socket_manager.cpp  socket_manager.h  steam_api.c  steam_api.spec  steam_api_bridge.cpp  steam_api_bridge.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keyvalues/: Baba Is You.txt  Factorio.txt  Hades.txt  Little Kitty Big City.txt  Messenger.txt  Noita.txt  Pathway.txt  Sea of Stars.txt  Tetris Effect.txt  Wargroove.txt
media/fake_odin_mini/: layout
ubuntufs/: build.gradle.kts
ubuntufs/src/main/: AndroidManifest.xml
(+775 files in other folders)
